[gd_scene load_steps=2 format=3 uid="uid://dx14oo207ngfu"]

[ext_resource type="Script" uid="uid://ds610xx2sqirg" path="res://Scripts/algorithms.gd" id="1_jwxql"]

[node name="Algorithms" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwxql")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.513726, 1, 0.768627)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.1
theme_override_constants/separation = 50
alignment = 1

[node name="AlgorithmsButton" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Algorithms"

[node name="ProgramsButton" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Programs"

[node name="ThreadsButton" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Threads"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "First Come FIrst Serve"

[node name="AlgoButton" type="CheckButton" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Shortest Job First"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Priority?"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "No"

[node name="PriorityButton" type="CheckButton" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Yes"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Timing?"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "No"

[node name="TimingButton" type="CheckButton" parent="MarginContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Yes"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 29.3
alignment = 1

[node name="RunButton" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer5/HBoxContainer"]
layout_mode = 2
text = "Run Simulation"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer5/HBoxContainer2"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/AlgorithmsButton" to="." method="_on_algorithms_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/ProgramsButton" to="." method="_on_programs_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/ThreadsButton" to="." method="_on_threads_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/HBoxContainer2/AlgoButton" to="." method="_on_algo_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/HBoxContainer3/PriorityButton" to="." method="_on_priority_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/HBoxContainer4/TimingButton" to="." method="_on_timing_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer5/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
